--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ git rm -r --cached .
 git add .
 git commit -m "Atualiza .gitignore para ignorar arquivos desnecessários"
 git push
+git init
+git add .
+git commit -m "Primeiro commit"
