--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ git push
 git init
 git add .
 git commit -m "Primeiro commit"
+cd .
+git init
+git add .
+git commit -m "Primeiro commit"
+git branch -M main
+git remote add origin https://github.com/Larifcoelho/exercicios--java.git
+git push -u origin main
